TODO: rxvt -name urxvt-girly /// leave pixel droppings
TODO: distributed clipboard example
WISH: anyevent mouse notification / manage MotionMask better.
WISH: OnTheSpot editing, or maybe switch to miiiiiiif. or maybe use perl and an overlay...
WISH: just for fun, do shade and tint with XRender.
DUMB: support tex fonts

TODO: kill arabic presentation form table
TODO: iso14755 code interacts badly with popup grabs

7.2  Sun Jan 22 21:58:16 CET 2006
        - bugfix: urxvt (not urxvtd) did not correctly handle multiple
          environments necessary, which resulted in segfaults within
          getenv (reproducable: urxvt -fn 9x15, open a menu once,
          ctrl-shift-672c).
        - bugfix: the selection speedup in in 7.1 unfortunately caused
          non-ascii characters to enlarge/move the selection.
        - bugfix: resizing sometimes leaked lines from the secondary to
          the primary screen.
        - bugfix: reducing window size while large amounts of text were output
          could lead to an assertion failure.
        - added "tabbed" extension that provides a crude tabbed terminal.
        - added "readline" extension that allows cursor positioning
          via mouse clicks.
	- now it is possible to insert the value of the CLIPBOARD selection
	  with shift - mouse button 2.
        - fixed the automove-background extension to ignore coordinates
          in non-synthetic events.
        - created a separate libpty for portable and secure
          pty/tty/utmp/wtmp/lastlog handling, and include it in rxvt-unicode.
        - the non-terminfo visual bell now works asynchronously, so
          continuous ASCI BELs in one terminal do no longer monopolise the
          whole urxvt[d] process.
        - support some *BSD makes (for the time being, gnu make is a safe bet).
        - work around bugs in FreeBSD's gcc.
        - implemented some *BSD fixes in configure.
	- removed support for obsolete offix dnd protocol.
